@@ -7,6 +7,8 @@ Group: Development/Tools
 Source0: qm-@QM_VERSION@.tar.gz
 Url: http://www.codesourcery.com/qm
 Provides: qm
+BuildRoot: /var/tmp/qm-@QM_VERSION@
+Prefix: /usr/local
 
 %description
 QM is CodeSourcery's Quality Management toolset.
@@ -15,19 +17,17 @@ QM is CodeSourcery's Quality Management toolset.
 %setup
 
 %build
-./configure
+./configure --prefix=${RPM_BUILD_ROOT}/usr/local
 make
 
 %install
 make install
 
 %clean
-rm -rf qm-@version@
+rm -rf ${RPM_BUILD_ROOT}
 
 %files
 /usr/local/lib/qm/*
 /usr/local/share/qm/*
-/usr/local/bin/qmtest
-/usr/local/bin/qmtest-remote
-/usr/local/bin/qmtrack
+/usr/local/bin/*
 /usr/local/share/doc/qm/*
